// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - end 1`] = `
<div>
  <div
    class="css-ujmiwr"
  >
    <div
      class="css-11bvkc9"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`renderer/components/primitives/Footer.tsx > should render itself & its children - space-between 1`] = `
<div>
  <div
    class="css-ujmiwr"
  >
    <div
      class="css-1fxbet0"
    >
      Test
    </div>
  </div>
</div>
`;
